--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<!--<div>
+  <h1>SALEMU3LAYKOM</h1>
+  <nav>
+    <a routerLink="/list" routerLinkActive="active">list</a>
+    <a routerLink="/login" routerLinkActive="active">Login</a>
+    <a routerLink="/register" routerLinkActive="active">Register</a>
+    
+  </nav>
+</div>-->
 <router-outlet></router-outlet>
