--- a/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
+++ b/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
@@ -4,7 +4,7 @@
             Festava Live
         </a>
 
-        <a href="ticket.html" class="btn custom-btn d-lg-none ms-auto me-4">Buy Ticket</a>
+    
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                 <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_1">Home</a>
+                    <a class="nav-link click-scroll" href="front">Home</a>
                 </li>
 
                 <li class="nav-item">
@@ -38,7 +38,8 @@
                 </li>
             </ul>
 
-            <a href="ticket.html" class="btn custom-btn d-lg-block d-none">Buy Ticket</a>
+            <a href="ticket.html" class="btn custom-btn d-lg-block d-none" href="login">Login</a>
+            <a href="ticket.html" class="btn custom-btn d-lg-block d-none" href="register">Sign up</a>
         </div>
     </div>
 </nav>
