--- a/src/app/BackOffice/sidebarback/sidebarback.component.html
+++ b/src/app/BackOffice/sidebarback/sidebarback.component.html
@@ -40,6 +40,16 @@
                 <span class="hide-menu">Buttons</span>
               </a>
             </li>
+
+            <li class="sidebar-item" onclick="showparticipation()">
+              <a class="sidebar-link" href="./participation.html" aria-expanded="false">
+                <span>
+                  <i class="ti ti-article"></i>
+                </span>
+                <span class="hide-menu">List participations</span>
+              </a>
+            </li>
+
             <li class="sidebar-item">
               <a class="sidebar-link" href="./ui-alerts.html" aria-expanded="false">
                 <span>
