--- a/src/app/BackOffice/alltemplateback/alltemplateback.component.html
+++ b/src/app/BackOffice/alltemplateback/alltemplateback.component.html
@@ -4,11 +4,16 @@
 <div class="layout-wrapper layout-content-navbar">
 <div class="layout-container">
     <app-sidebarback></app-sidebarback>
-    <app-headerfront></app-headerfront>
+  
     
     <app-navbarback></app-navbarback>
-    <router-outlet></router-outlet>
-    <app-footerback></app-footerback>
+    
+    <router-outlet>
+
+        
+    </router-outlet>
+    
+    
    
 </div>
 </div>
