--- a/src/app/components/authenticate/authenticate.component.html
+++ b/src/app/components/authenticate/authenticate.component.html
@@ -12,31 +12,41 @@
 
 
 
-<div class="container">
-  <div class="container">
-    <h2 style="color: rgb(195, 111, 39);">Authenticate</h2>
-    </div>
-    <div class="fullscreen-video">
-      <video autoplay="" loop="" muted="" class="custom-video" poster="">
-        <source src="/assets/FrontOffice/assets/video/pexels-2022395.mp4" type="video/mp4">
-        
-      </video>
-    </div>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="email" style="color: rgb(255, 255, 255);">Email</label>
-        <input type="email" formControlName="email" class="form-control" id="email">
-      </div>
-      <div class="form-group">
-        <label for="paswd"  style="color: rgb(255, 255, 255);">Password</label>
-        <input type="password" formControlName="paswd" class="form-control" id="paswd">
-      </div>
-      
-             <button type="submit" class="btn btn-orange" [disabled]="loginForm.invalid">Authenticate</button>
+<div class="container-fluid">
+  <div class="d-flex justify-content-center align-items-center">
+      <div *ngIf="!response || !response.authValid" class="card">
+          <div class="card-header d-flex justify-content-center p-4">
+              <h5 class="card-title">Sign In</h5>
+          </div>
+          <div class="card-body">
+              <div *ngIf="message" class="alert alert-primary" role="alert">
+                  {{message}}
+                </div>
+              <form [formGroup]="loginForm">
+                  <div class="input-group mb-3">
+                      <span class="input-group-text" id="basic-addon1">Email</span>
+                      <input type="text" class="form-control" formControlName="email" placeholder="email"
+                          aria-label="email" aria-describedby="basic-addon1">
+                  </div>
+                  <div class="input-group mb-3">
+                      <span class="input-group-text" id="password">Password</span>
+                      <input type="password" class="form-control" formControlName="password" placeholder="Password"
+                          aria-label="Password" aria-describedby="password">
+                  </div>
+                  <div class="d-flex justify-content-center p-2">
+                      <button type="button" class="btn btn-primary" (click)="login()">Login</button>
+                  </div>
+              </form>
 
-    </form>
+          </div>
+          <div class="card-footer d-flex justify-content-center p-4">
+              <a routerLink="/register" class="card-link">Register</a>
+              <a href="#" class="card-link">Forgot Email/password?</a>
+          </div>
+      </div>
+      <app-mfa *ngIf="response?.authValid && response?.mfaRequired" [email]="response.email"></app-mfa>
   </div>
-
+</div>
 
   <app-footerfront></app-footerfront>
 
