--- a/src/app/components/userlist/userlist.component.html
+++ b/src/app/components/userlist/userlist.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="searchUsers()">
+<!--<form (ngSubmit)="searchUsers()">
   <div class="form-group">
     <label for="firstName">First Name</label>
     <input type="text" class="form-control" id="firstName" [(ngModel)]="firstname" name="firstName" placeholder="Enter First Name">
@@ -14,8 +14,8 @@
   <thead>
     <tr>
       <th>First Name</th>
-      <th>Last Name</th>
-      <!-- Ajoutez d'autres colonnes au besoin -->
+      <th>Last Name</th>-->
+      <!-- Ajoutez d'autres colonnes au besoin 
     </tr>
   </thead>
   <tbody>
@@ -24,7 +24,7 @@
       <td>{{ user.lastname }}</td>
       <td>{{user.email}}</td>
       <td>{{user.paswd}}</td>
-      <!-- Ajoutez d'autres colonnes au besoin -->
+   
     </tr>
   </tbody>
-</table>
+</table>-->
