--- a/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
+++ b/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
@@ -1,10 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black;">
     <div class="container">
-        <a class="navbar-brand" >
+        <a class="navbar-brand">
             Festava Live
         </a>
-
-    
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,10 +34,18 @@
                 <li class="nav-item">
                     <a class="nav-link click-scroll" href="#section_6">Contact</a>
                 </li>
+                
+               <!-- Display only if the user is an admin -->
+<li class="nav-item" *ngIf="isAdmin">
+    <a class="nav-link click-scroll" href="admin">ADMIN</a>
+</li>
+
             </ul>
 
-            <a href="ticket.html" class="btn custom-btn d-lg-block d-none" href="login">Login</a>
-            <a href="ticket.html" class="btn custom-btn d-lg-block d-none" href="register">Sign up</a>
+            <!-- Afficher le bouton de déconnexion uniquement si l'utilisateur est connecté -->
+            <a *ngIf="!isLoggedIn" href="login" class="btn custom-btn d-lg-block d-none">Login</a>
+            <a *ngIf="!isLoggedIn" href="register" class="btn custom-btn d-lg-block d-none">Sign up</a>
+            <button *ngIf="isLoggedIn" class="btn custom-btn d-lg-block d-none" (click)="logout()">Logout</button>
         </div>
     </div>
 </nav>
