--- a/src/app/components/authenticate/authenticate.component.css
+++ b/src/app/components/authenticate/authenticate.component.css
@@ -121,4 +121,22 @@ label {
     font-size: 16px;
     width: 48%;
   }
-    
+  .popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    padding: 20px;
+    border: 2px solid #cccccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    animation: fadeOut 6s forwards; /* Animation pour faire disparaître le popup après 6 secondes */
+  }
+  
+  @keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; }
+  }
+  
