--- a/src/app/components/authenticate/reset-password/reset-password.component.html
+++ b/src/app/components/authenticate/reset-password/reset-password.component.html
@@ -1,26 +1,29 @@
 <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-header">Reset Password</div>
-          <div class="card-body">
-            <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
-              <!-- Champ pour le nouveau mot de passe -->
-              <div class="form-group">
-                <label for="password">New Password</label>
-                <input type="password" class="form-control" id="password" formControlName="password">
-                <!-- Affichage des erreurs liées au nouveau mot de passe -->
-                <div *ngIf="resetForm.get('password')!.invalid && (resetForm.get('password')!.dirty || resetForm.get('password')!.touched)" class="text-danger">
-                  <div *ngIf="resetForm.get('password')!.errors?.['required']">New Password is required</div>
-                  <div *ngIf="resetForm.get('password')!.errors?.['minlength']">Password must be at least 8 characters long</div>
-                </div>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">Reset Password</div>
+        <div class="card-body">
+          <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
+            <!-- Champ pour le nouveau mot de passe -->
+            <div class="form-group">
+              <label for="password">New Password</label>
+              <input type="password" class="form-control" id="password" formControlName="password">
+              <!-- Affichage des erreurs liées au nouveau mot de passe -->
+              <div *ngIf="resetForm.get('password')!.invalid && (resetForm.get('password')!.dirty || resetForm.get('password')!.touched)" class="text-danger">
+                <div *ngIf="resetForm.get('password')!.errors?.['required']">New Password is required</div>
+                <div *ngIf="resetForm.get('password')!.errors?.['minlength']">Password must be at least 8 characters long</div>
               </div>
-              
-              <!-- Bouton de soumission -->
-              <button type="submit" class="btn btn-primary" [disabled]="resetForm.invalid">Submit</button>
-            </form>
-          </div>
+            </div>
+            <!-- Affichage du popupMessage -->
+            <div *ngIf="popupMessage" class="popup">
+              <p>{{ popupMessage }}</p>
+            </div>
+            <!-- Bouton de soumission -->
+            <button type="submit" class="btn btn-primary" [disabled]="resetForm.invalid">Submit</button>
+          </form>
         </div>
       </div>
     </div>
   </div>
+</div>
