--- a/src/app/components/authenticate/authenticate.component.html
+++ b/src/app/components/authenticate/authenticate.component.html
@@ -10,7 +10,13 @@
 <app-headerfront></app-headerfront>      
 <app-navbarcomponentfront></app-navbarcomponentfront> 
 
-
+<div class="video-wrap">
+    <video autoplay loop muted class="custom-video" poster="">
+      <source src="/assets/FrontOffice/assets/video/pexels-2022395.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay"></div>
+  </div>
 
 <div class="container-fluid">
   <div class="d-flex justify-content-center align-items-center">
