--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -104,3 +104,106 @@
 .name-fields input {
   width: 48%; /* Make input fields equal width (optional) */
 }
+/* Style pour le formulaire de carte */
+.card {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Style pour l'en-tête de carte */
+.card-header {
+  background-color: #000000;
+  color: #fff;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+/* Style pour le titre de carte */
+.card-title {
+  font-size: 1.5rem;
+}
+
+/* Style pour le corps de la carte */
+.card-body {
+  padding: 2rem;
+}
+
+/* Style pour les libellés de formulaire */
+label {
+  font-weight: 500;
+}
+
+/* Style pour les champs de saisie */
+.form-control {
+  border-radius: 5px;
+}
+
+/* Style pour les boutons */
+.btn-primary {
+  background-color: #000000;
+  border-color: #000000;
+}
+
+.btn-primary:hover {
+  background-color: #000000;
+  border-color: #000000;
+}
+
+/* Style pour les liens de carte */
+.card-link {
+  color: #000000;
+}
+
+.card-link:hover {
+  text-decoration: none;
+  color: #000000;
+}
+/* Styles pour la vidéo en arrière-plan */
+.video-wrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh; /* Utilisation de la hauteur de la fenêtre */
+  overflow: hidden;
+  z-index: -1;
+}
+
+.custom-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+.custom-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); /* Couleur de superposition semi-transparente */
+}
+
+.container-fluid {
+  position: relative;
+  z-index: 1;
+}
+
+/* Ajoutez d'autres styles selon vos préférences */
