--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -1,1 +1,9 @@
-<canvas id="myChart" width="400" height="400"></canvas>
+<div class="container">
+    <div class="row">
+      <div class="col">
+        <h2>Statistiques des rôles</h2>
+        <canvas id="rolesChart" width="400" height="400"></canvas>
+      </div>
+    </div>
+  </div>
+  
