--- a/src/app/component/equipment/list-equipment/list-equipment.component.css
+++ b/src/app/component/equipment/list-equipment/list-equipment.component.css
@@ -16,3 +16,8 @@
   .table-container {
     margin-left: 30px; /* Ajustez la valeur selon vos besoins */
   }
+  .search-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
