--- a/src/app/component/staff/list-staff/list-staff.component.css
+++ b/src/app/component/staff/list-staff/list-staff.component.css
@@ -16,3 +16,9 @@
   .table-container {
     margin-left: 30px; /* Ajustez la valeur selon vos besoins */
   }
+  .search-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
