--- a/src/app/component/staff/chart-staff/chart-staff.component.html
+++ b/src/app/component/staff/chart-staff/chart-staff.component.html
@@ -1,4 +1,4 @@
-<div><H1> EQUIPMENT PER QUANTITY </H1></div>
+<div><H1> STAFF PER AGE </H1></div>
 
 
 <div class="container mt-5">
@@ -9,7 +9,7 @@
     </div>
     
     <div style="margin-left: 700px;">
-    <button routerLink="/admin/listequipment" class="btn btn-secondary mt-2" >BACK</button>
+    <button routerLink="/admin/liststaff" class="btn btn-secondary mt-2" >BACK</button>
     
     </div>
     
