--- a/src/app/component/staff/list-staff/list-staff.component.css
+++ b/src/app/component/staff/list-staff/list-staff.component.css
@@ -22,3 +22,14 @@
     align-items: center;
 }
 
+.sort-button {
+  cursor: pointer;
+  
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.sort-button:hover {
+  background-color: grey;
+}
+
