--- a/src/app/component/supplier/add-supplier/add-supplier.component.html
+++ b/src/app/component/supplier/add-supplier/add-supplier.component.html
@@ -3,12 +3,12 @@
     
     <form [formGroup]="supplierForm" (ngSubmit)="saveSupplier()" class="mx-auto w-75 p-4 shadow rounded bg-light">
       <div class="form-group">
-        <label for="name">Nom :</label>
+        <label for="name">Name :</label>
         <input id="name" type="text" formControlName="name" class="form-control" required>
       </div>
     
       <div class="form-group">
-        <label for="contact_info">Informations de contact :</label>
+        <label for="contact_info">Informations  :</label>
         <input id="contact_info" type="text" formControlName="contact_info" class="form-control" required>
       </div>
       <div class="form-group">
