--- a/src/app/component/equipment/add-equipment/add-equipment.component.html
+++ b/src/app/component/equipment/add-equipment/add-equipment.component.html
@@ -3,23 +3,23 @@
   
   <form [formGroup]="equipmentForm" (ngSubmit)="saveEquipment()" class="mx-auto w-75 p-4 shadow rounded bg-light">
     <div class="form-group">
-      <label for="name_equipment">Nom de l'équipement:</label>
+      <label for="name_equipment">Equipment name</label>
       <input type="text" id="name_equipment" formControlName="name_equipment" class="form-control" required>
     </div>
     <div class="form-group">
-      <label for="quantity">Quantité:</label>
+      <label for="quantity">Quantity:</label>
       <input type="number" id="quantity" formControlName="quantity" class="form-control" required>
     </div>
     <div class="form-group">
-      <label for="etat">Etat:</label>
+      <label for="etat">Condition:</label>
       <input type="text" id="etat" formControlName="etat" class="form-control" required>
     </div>
     <div class="row">
       <div class="col-md-6 text-left">
-        <button routerLink="/admin/listequipment" class="btn btn-secondary mt-2">Retour</button>
+        <button routerLink="/admin/listequipment" class="btn btn-secondary mt-2">CANCEL</button>
       </div>
       <div class="col-md-6 text-right">
-        <button type="submit" class="btn btn-success">Ajouter l'équipement</button>
+        <button type="submit" class="btn btn-success">ADD</button>
       </div>
     </div>
   </form>
