--- a/src/app/component/equipment/list-equipment/list-equipment.component.html
+++ b/src/app/component/equipment/list-equipment/list-equipment.component.html
@@ -9,10 +9,10 @@
   <table class="table table-striped mx-auto w-75">
     <thead>
       <tr>
-        <th>Equipment ID</th>
-        <th>Equipment name</th>
-        <th>quantity</th>
-        <th>Etat</th>
+        <th class="sort-button" (click)="sortByID()">Equipment ID</th>
+        <th class="sort-button" (click)="sortByName()">Equipment name</th>
+        <th class="sort-button" (click)="sortByQuantity()">Quantity</th>
+        <th>Condition</th>
         <th>Actions</th>
       </tr>
     </thead>
@@ -35,13 +35,11 @@
   <div>  <button (click)="downloadExcel()">Download Excel</button></div>
   
   <div class="text-center mt-3">
-    <button routerLink="/equipmentchart">Voir le graphique</button>
+    <button routerLink="/admin/equipmentchart">Statistics</button>
 
 
   </div>
   
-<div class="chart-container">
-  <canvas id="canvas"></canvas>
-</div>
+
 
 </div>
