--- a/src/app/component/supplier/list-supplier/list-supplier.component.css
+++ b/src/app/component/supplier/list-supplier/list-supplier.component.css
@@ -26,5 +26,15 @@
     justify-content: center;
     align-items: center;
 }
+.sort-button {
+  cursor: pointer;
+  
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.sort-button:hover {
+  background-color: grey;
+}
 
   
