--- a/src/app/component/supplier/list-supplier/list-supplier.component.html
+++ b/src/app/component/supplier/list-supplier/list-supplier.component.html
@@ -8,8 +8,9 @@
   <table class="table table-striped mx-auto w-75">
     <thead>
       <tr>
-        <th>ID</th>
-        <th>Name</th>
+        <th class="sort-button" (click)="sortByID()">ID</th>
+        <th class="sort-button" (click)="sortByName()">Name</th>
+        
         <th>Contact Info</th>
         <th>Number</th>
         <th>Email</th>
