--- a/src/app/component/equipment/update-equipment/update-equipment.component.html
+++ b/src/app/component/equipment/update-equipment/update-equipment.component.html
@@ -1,14 +1,15 @@
 
+<div class="container mt-5">
+ 
 
 
 
-<div class="container" ></div>
-<form [formGroup]="equipmentForm" class="equipment-form">
+<form [formGroup]="equipmentForm" class="equipment-form"  class="mx-auto w-75 p-4 shadow rounded bg-light">
 
 
-  <h2>Update </h2>
+  <h2>Update equipment </h2>
   <div>
-      <label for="name_equipment">name_equipment</label>
+      <label for="name_equipment">Equipment name</label>
       <input type="text" id="name_equipment" formControlName="name_equipment">
   </div>
   <div>
@@ -16,11 +17,20 @@
       <input type="number" id="quantity" formControlName="quantity">
   </div>
 <div>
-      <label for="etat">etat</label>
+      <label for="etat">Condition</label>
       <input type="text" id="etat" formControlName="etat">
       
   </div>
-  <div><button (click)="updateEquipment()">update</button></div>
+
+  
+  <div class="row">
+    <div class="col-md-6 text-left">
+      <button routerLink="/admin/listequipment" class="btn btn-secondary mt-2">CANCEL</button>
+    </div>
+    <div class="col-md-6 text-right">
+      <button button (click)="updateEquipment()">update</button>
+    </div>
+  </div>
 </form>  
   
 
