--- a/src/app/component/supplier/list-supplier/list-supplier.component.html
+++ b/src/app/component/supplier/list-supplier/list-supplier.component.html
@@ -35,6 +35,8 @@
   </table>
   <div class="text-center mt-3">
     <button routerLink="/admin/addsupplier">Add new supplier</button>
+    <div> 
+      <br><br> <button (click)="downloadExcel()">Download Excel</button></div>
   </div>
-  <div>  <button (click)="downloadExcel()">Download Excel</button></div>
+  
 </div>
