--- a/src/app/component/supplier/update-supplier/update-supplier.component.html
+++ b/src/app/component/supplier/update-supplier/update-supplier.component.html
@@ -1,5 +1,5 @@
 <div class="container"></div>
-<form [formGroup]="supplierForm" class="supplier-form">
+<form [formGroup]="supplierForm"  class="mx-auto w-50 p-4 shadow rounded bg-light">
   <h2>Update Supplier</h2>
   <div>
     <label for="name">Name</label>
@@ -17,6 +17,18 @@
     <label for="email">Email</label>
     <input type="email" id="email" formControlName="email">
   </div>
-  <div><button (click)="updateSupplier()">Update</button></div>
+ 
+
+  <div class="row">
+   
+    <div class="col-md-6 text-right">
+      <button routerLink="/admin/listsupplier">Back</button>
+    </div>
+    <div class="col-md-6 text-left">
+      <button (click)="updateSupplier()">Update</button>
+    </div>
+  </div>
+
+
 </form>
-<button routerLink="/admin/listsupplier">Retour</button>
+
