Metier et API module 1

--- a/src/app/FrontOffice/alltemplatefront/alltemplatefront.component.html
+++ b/src/app/FrontOffice/alltemplatefront/alltemplatefront.component.html
@@ -22,7 +22,7 @@
          <app-headerfront></app-headerfront>      
          <app-navbarcomponentfront></app-navbarcomponentfront> 
          <app-homecomponentfront></app-homecomponentfront>
-           
+              <app-castvote></app-castvote>
          <app-footerfront></app-footerfront>
          
       
