--- a/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
+++ b/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
@@ -21,10 +21,14 @@
                     <a class="nav-link click-scroll" href="#section_2">About</a>
                 </li>
 
+                <a class="nav-item" [routerLink]="['/galaxydance/vote']" aria-expanded="false">
+                    
+                    <span class="hide-menu">Vote Now</span>
+                  </a>
                 <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_3">Artists</a>
+                    <a class="nav-link" href="#section_participant_dashboard">Participation
+                    </a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link click-scroll" href="#section_4">Schedule</a>
                 </li>
