--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -26,4 +26,6 @@
       </tbody>
     </table>
   </div>
-  <button routerLink="/addVote"> Add </button>
+  <button mat-raised-button (click)="openForm()">
+    Add Vote
+  </button>
