--- a/src/app/BackOffice/alltemplateback/alltemplateback.component.html
+++ b/src/app/BackOffice/alltemplateback/alltemplateback.component.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horizontal Division</title>
-    <link rel="shortcut icon" type="image/png" href="/assets/BackOffice/images/logos/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="../profile/logo.png" />
     <link rel="stylesheet" href="/assets/BackOffice/css/styles.min.css" />
+
     <style>
         body, html {
             margin: 0;
