--- a/src/app/add-participation/add-participation.component.html
+++ b/src/app/add-participation/add-participation.component.html
@@ -1,14 +1,15 @@
 <div class="form-container">
 <h2>Add Participation</h2>
 <form [formGroup]="participationForm" (ngSubmit)="addPart()">
+    <div>
+        <label for="userId">User ID:</label>
+        <input type="number" id="userId" formControlName="userId" required>
+      </div>
 <div class="form-group">
     <label>ShowTime :</label>
     <input type="datetime-local" formControlName="showtime" class="form-control">
 </div>
-<div class="form-group">
-    <label>Participant Code :</label>
-    <input type="number" formControlName="participantCode" class="form-control">
-</div>
+
 <div class="form-group">
     <label>Total Votes :</label>
     <input type="number" formControlName="totalVotes" class="form-control">
