--- a/src/app/component/equipment/list-equipment/list-equipment.component.html
+++ b/src/app/component/equipment/list-equipment/list-equipment.component.html
@@ -1,10 +1,10 @@
 <div class="container mt-5">
-  <h2 class="text-center">Liste des équipements</h2>
+  <h2 class="text-center">List of equipments</h2>
   <div class="search-form">
-    <input [(ngModel)]="id_equipment" placeholder="ID de l'équipement">
-    <input [(ngModel)]="name_equipment" placeholder="Nom de l'équipement">
-    <input [(ngModel)]="etat" placeholder="Etat">
-    <button (click)="searchEquipment()">Rechercher</button>
+    <input [(ngModel)]="id_equipment" placeholder="ID ">
+    <input [(ngModel)]="name_equipment" placeholder="Equipment name">
+    <input [(ngModel)]="etat" placeholder="Condition">
+    <button (click)="searchEquipment()">Search</button>
   </div>
   <table class="table table-striped mx-auto w-75">
     <thead>
