--- a/src/app/component/staff/list-staff/list-staff.component.html
+++ b/src/app/component/staff/list-staff/list-staff.component.html
@@ -1,15 +1,23 @@
 <div class="container mt-5">
   <h2 class="text-center">Staff List</h2>
-  <div class="search-form">
-    <input [(ngModel)]="id_staff" placeholder="Staff ID">
-    <input [(ngModel)]="name" placeholder="Staff Name">
-    <input [(ngModel)]="job" placeholder="Job">
-    <button (click)="searchStaff()">Search</button>
-  </div>
-  <table class="table table-striped mx-auto w-75">
+ 
+<div class="search-form">
+  <input [(ngModel)]="name" (ngModelChange)="searchStaff()" placeholder="Staff Name">
+
+<label for="job">Job :</label>
+<select id="job" [(ngModel)]="job" (ngModelChange)="searchStaff()">
+  <option value="">All</option>
+  <option *ngFor="let job of jobs" [value]="job">{{job}}</option>
+</select>
+
+
+</div>
+
+  <table class="table table-striped mx-auto w-75 centered-table">
+
     <thead>
       <tr>
-        <th class="sort-button" (click)="sortByID()">ID</th>
+   
 <th class="sort-button" (click)="sortByName()">Name</th>
 
 <th class="sort-button" (click)="sortByDateOfBirth()">DateOfBirth</th>
@@ -25,7 +33,7 @@
     <tbody>
       <tr *ngFor="let staff of staffList">
         
-        <td>{{ staff.id_staff }}</td>
+       
         <td>{{ staff.name }}</td>
         <td>{{ staff.DateOfBirth }}</td>
         <td>{{ staff.job }}</td>
