--- a/src/app/component/supplier/list-supplier/list-supplier.component.css
+++ b/src/app/component/supplier/list-supplier/list-supplier.component.css
@@ -37,4 +37,18 @@
   background-color: grey;
 }
 
-  
+.centered-table {
+  border-collapse: collapse;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+}
+
+.centered-table th,
+.centered-table td {
+  text-align: center;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+.centered-table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
