--- a/src/app/component/supplier/list-supplier/list-supplier.component.html
+++ b/src/app/component/supplier/list-supplier/list-supplier.component.html
@@ -1,14 +1,16 @@
 <div class="container mt-5">
   <h2 class="text-center">List of suppliers</h2>
   <div class="search-form">
-    <input [(ngModel)]="id_supplier" placeholder="Supplier ID">
-    <input [(ngModel)]="name" placeholder="Supplier Name">
-    <button (click)="searchSupplier()">Search</button>
+    
+  
+<input type="text" [(ngModel)]="searchTerm" (ngModelChange)="onSearchTermChange()" placeholder="Search Supplier Name...">
+
   </div>
-  <table class="table table-striped mx-auto w-75">
+  <table class="table table-striped mx-auto w-75 centered-table">
+
     <thead>
       <tr>
-        <th class="sort-button" (click)="sortByID()">ID</th>
+    
         <th class="sort-button" (click)="sortByName()">Name</th>
         
         <th>Contact Info</th>
@@ -19,14 +21,14 @@
     </thead>
     <tbody>
       <tr *ngFor="let supplier of supplierList">
-        <td>{{ supplier.id_supplier }}</td>
+     
         <td>{{ supplier.name }}</td>
         <td>{{ supplier.contact_info }}</td>
         <td>{{ supplier.number }}</td>
         <td>{{ supplier.email }}</td>
         <td>
           <button (click)="removeSupplier(supplier)">Delete</button>
-          <button routerLink="/admin/updateSupplier/{{supplier.id_supplier}}">Update</button>
+          <button routerLink="/admin/updatesupplier/{{supplier.id_supplier}}">Update</button>
         
 
         </td>
