--- a/src/app/BackOffice/sidebarback/sidebarback.component.html
+++ b/src/app/BackOffice/sidebarback/sidebarback.component.html
@@ -37,7 +37,8 @@
                 <span>
                   <i class="ti ti-article"></i>
                 </span>
-                <span class="hide-menu">Buttons</span>
+                <a  href="stats" class="btn custom-btn d-lg-block d-none">Statstique</a>
+          
               </a>
             </li>
             <li class="sidebar-item">
@@ -45,7 +46,7 @@
                 <span>
                   <i class="ti ti-alert-circle"></i>
                 </span>
-                <span class="hide-menu">Alerts</span>
+                <a  href="banuser" class="btn custom-btn d-lg-block d-none">Ban User</a>
               </a>
             </li>
             <li class="sidebar-item">
@@ -81,7 +82,8 @@
                 <span>
                   <i class="ti ti-login"></i>
                 </span>
-                <span class="hide-menu">Login</span>
+                <a href="login" class="btn custom-btn d-lg-block d-none">Login</a>
+               
               </a>
             </li>
             <li class="sidebar-item">
@@ -89,7 +91,8 @@
                 <span>
                   <i class="ti ti-user-plus"></i>
                 </span>
-                <span class="hide-menu">Register</span>
+              
+            <a href="register" class="btn custom-btn d-lg-block d-none">Sign up</a>
               </a>
             </li>
             <li class="nav-small-cap">
