--- a/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
+++ b/src/app/FrontOffice/navbarcomponentfront/navbarcomponentfront.component.html
@@ -36,9 +36,11 @@
                 </li>
                 
                <!-- Display only if the user is an admin -->
+<!-- Display only if the user is an admin -->
 <li class="nav-item" *ngIf="isAdmin">
     <a class="nav-link click-scroll" href="admin">ADMIN</a>
 </li>
+
 
             </ul>
 
