--- a/src/app/BackOffice/navbarback/navbarback.component.html
+++ b/src/app/BackOffice/navbarback/navbarback.component.html
@@ -10,6 +10,11 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link nav-icon-hover" href="/stats">
+              <i class="ti ti-panel"></i> <!-- Utilisez une icône appropriée -->
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link nav-icon-hover" href="javascript:void(0)">
               <i class="ti ti-bell-ringing"></i>
               <div class="notification bg-primary rounded-circle"></div>
